Add plugins for jekyll-feed and jekyll-sitemap

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,6 @@ description: The Creative Technician
 markdown: kramdown
 theme: null
 permalink: /blog/:title/
+plugins:
+  - jekyll-feed
+  - jekyll-sitemap
